--- a/branches/Hastur/Tests/TestOgreMain.vcproj
+++ b/branches/Hastur/Tests/TestOgreMain.vcproj
@@ -19,8 +19,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="OgreMain\include;..\OgreMain\include"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;REFERENCEAPPLAYER_EXPORTS"
+				AdditionalIncludeDirectories="OgreMain\include;..\OgreMain\include;..\Dependencies\include"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;_STLP_DEBUG"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -133,15 +133,6 @@
 				RelativePath="OgreMain\src\EdgeBuilderTests.cpp">
 			</File>
 			<File
-				RelativePath="OgreMain\src\FileSystemArchiveTests.cpp">
-			</File>
-			<File
-				RelativePath="OgreMain\src\StringTests.cpp">
-			</File>
-			<File
-				RelativePath="OgreMain\src\ZipArchiveTests.cpp">
-			</File>
-			<File
 				RelativePath="src\main.cpp">
 			</File>
 		</Filter>
@@ -150,15 +141,6 @@
 			Filter="h;hpp;hxx;hm;inl;inc">
 			<File
 				RelativePath="OgreMain\include\EdgeBuilderTests.h">
-			</File>
-			<File
-				RelativePath="OgreMain\include\FileSystemArchiveTests.h">
-			</File>
-			<File
-				RelativePath="OgreMain\include\StringTests.h">
-			</File>
-			<File
-				RelativePath="OgreMain\include\ZipArchiveTests.h">
 			</File>
 		</Filter>
 		<Filter
