--- a/trunk/Tools/XSIExport/scripts/XSIExport.vcproj
+++ b/trunk/Tools/XSIExport/scripts/XSIExport.vcproj
@@ -19,7 +19,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include;..\..\..\OgreMain\include;$(XSISDK_ROOT)\include;$(XSIFTK_ROOT)\export\h\Core;$(XSIFTK_ROOT)\export\h\FTK"
+				AdditionalIncludeDirectories="..\include;..\..\..\OgreMain\include;$(XSISDK_ROOT)\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;XSIEXPORT_EXPORTS;;__XSI_PLUGIN;XSI_STATIC_LINK;__XSI_PLUGIN_"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
@@ -37,7 +37,7 @@
 				AdditionalDependencies="OgreMain_d.lib odbc32.lib odbccp32.lib sicppsdk.lib sicoresdk.lib"
 				OutputFile="$(OutDir)/OgreXSIExporter.dll"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="..\lib\$(ConfigurationName);..\..\..\OgreMain\lib\$(ConfigurationName);$(XSISDK_ROOT)\lib\nt-x86;$(XSIFTK_ROOT)\export\bin;$(XSIFTK_ROOT)\export\lib"
+				AdditionalLibraryDirectories="..\lib\$(ConfigurationName);..\..\..\OgreMain\lib\$(ConfigurationName);$(XSISDK_ROOT)\lib\nt-x86"
 				ModuleDefinitionFile="..\misc\OgreXSIExport.def"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/XSIExport.pdb"
@@ -71,7 +71,7 @@
 				Optimization="0"
 				InlineFunctionExpansion="1"
 				OmitFramePointers="TRUE"
-				AdditionalIncludeDirectories="..\include;..\..\..\OgreMain\include;$(XSISDK_ROOT)\include;$(XSIFTK_ROOT)\export\h\Core;$(XSIFTK_ROOT)\export\h\FTK"
+				AdditionalIncludeDirectories="..\include;..\..\..\OgreMain\include;$(XSISDK_ROOT)\include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;XSIEXPORT_EXPORTS;;__XSI_PLUGIN;XSI_STATIC_LINK;__XSI_PLUGIN_"
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
@@ -89,7 +89,7 @@
 				AdditionalDependencies="OgreMain.lib odbc32.lib odbccp32.lib sicppsdk.lib  sicoresdk.lib"
 				OutputFile="$(OutDir)/OgreXSIExporter.dll"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="..\lib\$(ConfigurationName);..\..\..\OgreMain\lib\$(ConfigurationName);$(XSISDK_ROOT)\lib\nt-x86;$(XSIFTK_ROOT)\export\bin;$(XSIFTK_ROOT)\export\lib"
+				AdditionalLibraryDirectories="..\lib\$(ConfigurationName);..\..\..\OgreMain\lib\$(ConfigurationName);$(XSISDK_ROOT)\lib\nt-x86"
 				ModuleDefinitionFile="..\misc\OgreXSIExport.def"
 				GenerateDebugInformation="TRUE"
 				SubSystem="2"
