--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -20,6 +20,7 @@ AM_PROG_LEX
 dnl Setup target-specific parameters
 OGRE_SETUP_FOR_TARGET
 
+AC_DISABLE_STATIC
 AC_PROG_LIBTOOL
 
 dnl GCC version check
