--- a/trunk/Samples/Gui/src/Makefile.am
+++ b/trunk/Samples/Gui/src/Makefile.am
@@ -1,9 +1,9 @@
-INCLUDES = $(STLPORT_CFLAGS) -I$(top_srcdir)/Samples/Gui/include -I$(top_srcdir)/OgreMain/include -I$(top_srcdir)/Samples/Common/include -I$(top_srcdir)/PlugIns/GuiElements/include
+INCLUDES = $(STLPORT_CFLAGS) -I$(top_srcdir)/OgreMain/include -I$(top_srcdir)/Samples/Common/include @CEGUI_CFLAGS@
 
 noinst_PROGRAMS = Gui
 Gui_SOURCES = Gui.cpp
-Gui_LDFLAGS = -L$(top_builddir)/OgreMain/src -L$(top_builddir)/PlugIns/GuiElements/src
-Gui_LDADD = -lOgreMain
+Gui_LDFLAGS = -L$(top_builddir)/OgreMain/src
+Gui_LDADD = -lOgreMain @CEGUI_LIBS@
 
 install-exec-local:
 	$(INSTALL_PROGRAM) .libs/Gui $(top_builddir)/Samples/Common/bin/Gui
