--- a/trunk/Tests/PlayPen/scripts/PlayPen.vcproj
+++ b/trunk/Tests/PlayPen/scripts/PlayPen.vcproj
@@ -129,10 +129,13 @@
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc">
 			<File
-				RelativePath="..\..\Common\include\ExampleApplication.h">
+				RelativePath="..\..\..\Samples\Common\include\ExampleApplication.h">
 			</File>
 			<File
-				RelativePath="..\..\Common\include\ExampleFrameListener.h">
+				RelativePath="..\..\..\Samples\Common\include\ExampleFrameListener.h">
+			</File>
+			<File
+				RelativePath="..\..\..\Samples\Common\include\ExampleLoadingBar.h">
 			</File>
 		</Filter>
 		<Filter
