--- a/trunk/Tools/Makefile.am
+++ b/trunk/Tools/Makefile.am
@@ -1,6 +1,1 @@
-if BUILD_PYTHON_INTERFACE
-PYSUBDIR=PythonInterface
-else
-PYSUBDIR=
-endif
-SUBDIRS=$(PYSUBDIR) XMLConverter MeshUpgrader MaterialUpgrader
+SUBDIRS=XMLConverter MeshUpgrader MaterialUpgrader
