--- a/trunk/RenderSystems/GL/scripts/RenderSystem_GL.vcproj
+++ b/trunk/RenderSystems/GL/scripts/RenderSystem_GL.vcproj
@@ -196,7 +196,7 @@
 				RelativePath="..\src\OgreWin32Window.cpp">
 			</File>
 			<File
-				RelativePath="..\src\glprocs.c">
+				RelativePath="..\src\glew.cpp">
 			</File>
 			<Filter
 				Name="nvparse"
@@ -446,13 +446,16 @@
 				RelativePath="..\..\..\Dependencies\include\GL\gl.h">
 			</File>
 			<File
+				RelativePath="..\include\GL\glew.h">
+			</File>
+			<File
 				RelativePath="..\..\..\Dependencies\include\GL\glext.h">
 			</File>
 			<File
 				RelativePath="..\..\..\Dependencies\include\GL\glxext.h">
 			</File>
 			<File
-				RelativePath="..\..\..\Dependencies\include\GL\wglext.h">
+				RelativePath="..\include\GL\wglew.h">
 			</File>
 			<Filter
 				Name="glsl"
