--- a/Samples/Common/CEGUIRenderer/CEGUI-OGRE.pc.in
+++ b/Samples/Common/CEGUIRenderer/CEGUI-OGRE.pc.in
@@ -6,6 +6,6 @@ includedir=@includedir@
 Name: CEGUI-OGRE
 Description: CEGUI Renderer interface module for OGRE (Object-Oriented Graphics Rendering Engine).
 Version: @VERSION@
-Requires: OGRE = @VERSION@
+Requires: OGRE = @VERSION@, CEGUI >= 0.3.0
 Libs: -L${libdir} -lCEGUIOgreRenderer
 Cflags: -I${includedir}/@PACKAGE@ @OGRE_CFLAGS@
