--- a/trunk/RenderSystems/GL/src/Makefile.am
+++ b/trunk/RenderSystems/GL/src/Makefile.am
@@ -27,6 +27,7 @@ RenderSystem_GL_la_SOURCES = OgreGLEngineDll.cpp \
                              OgreGLDefaultHardwareBufferManager.cpp \
                              OgreGLContext.cpp \
                              OgreGLPixelFormat.cpp \
+			     OgreGLFBORenderTexture.cpp \
 				glew.cpp
 
 RenderSystem_GL_la_LDFLAGS = -module $(PLUGIN_FLAGS) -L$(top_builddir)/OgreMain/src -Wl,-z,defs
