--- a/trunk/Tools/XMLConverter/scripts/XMLConverter.vcproj
+++ b/trunk/Tools/XMLConverter/scripts/XMLConverter.vcproj
@@ -122,6 +122,12 @@
 			</File>
 			<File
 				RelativePath="..\src\main.cpp">
+				<FileConfiguration
+					Name="Release|Win32">
+					<Tool
+						Name="VCCLCompilerTool"
+						AdditionalOptions="/Zm150"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\src\tinystr.cpp">
